prior to stand up

--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -1273,29 +1273,49 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 108
         },
-        "outputId": "a8be4c35-c9fc-4164-eb96-7ff80d58f406"
+        "outputId": "5f2ec47a-1c36-4f9d-d07d-9663f19ec5b5"
       },
       "source": [
         "target = 'Great'\n",
         "yTrain = trainDf[target]\n",
+        "yVal = valDf[target]\n",
+        "yTest = testDf[target]\n",
         "\n",
         "# mode for target\n",
-        "baseClass = yTrain.mode()[0]\n",
-        "yPred = [baseClass] * len(yTrain)\n",
+        "trainClass = yTrain.mode()[0]\n",
+        "yTrainPred = [trainClass] * len(yTrain)\n",
+        "\n",
+        "valClass = yVal.mode()[0]\n",
+        "yValPred = [valClass] * len(yVal)\n",
+        "\n",
+        "testClass = yTest.mode()[0]\n",
+        "yTestPred = [testClass] * len(yTest)\n",
         "\n",
         "# accuracy using mode only (count of mode val / total count)\n",
-        "baseAccuracy = accuracy_score(yTrain, yPred)\n",
+        "baseTrainAccuracy = accuracy_score(yTrain, yTrainPred)\n",
+        "baseValAccuracy = accuracy_score(yVal, yValPred)\n",
+        "baseTestAccuracy = accuracy_score(yTest, yTestPred)\n",
         "\n",
-        "print(f'Baseline Accuracy: {baseAccuracy:.5f}')"
+        "def prtBaseAcc():\n",
+        "\n",
+        "  print(f'Baseline Test Accuracy: {baseTrainAccuracy:.5f}')\n",
+        "  print(f'Baseline Validate Accuracy: {baseValAccuracy:.5f}')\n",
+        "  print(f'Baseline Train Accuracy: {baseTestAccuracy:.5f}')\n",
+        "  print('\\n')\n",
+        "prtBaseAcc()"
       ],
-      "execution_count": 14,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Baseline Accuracy: 0.59060\n"
+            "Baseline Test Accuracy: 0.59060\n",
+            "Baseline Validate Accuracy: 0.55294\n",
+            "Baseline Train Accuracy: 0.57895\n",
+            "\n",
+            "\n"
           ],
           "name": "stdout"
         }
@@ -1308,7 +1328,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### SciKit regression"
+        "### SciKit Logistic Regression"
       ]
     },
     {
@@ -1319,11 +1339,12 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.impute import SimpleImputer\n",
         "\n",
-        "linearReg = LinearRegression()\n",
-        "impute = SimpleImputer()"
+        "from sklearn.metrics import mean_absolute_error as meanAbErr\n",
+        "from sklearn.metrics import mean_squared_error as meanSqErr\n",
+        "from sklearn.metrics import r2_score"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1331,55 +1352,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Hk1PGaEkn-HH",
+        "id": "WqSsqDcRBFaT",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "?impute()"
+        "impute = SimpleImputer()"
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TxZ-KpMji9MH",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 217
-        },
-        "outputId": "585f186b-be5f-4b9a-dfa1-694f02f43a9a"
-      },
-      "source": [
-        "trainDf.columns"
-      ],
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Index(['Burrito', 'Yelp', 'Google', 'Chips', 'Cost', 'Hunger', 'Mass (g)',\n",
-              "       'Density (g/mL)', 'Length', 'Circum', 'Volume', 'Tortilla', 'Temp',\n",
-              "       'Meat', 'Fillings', 'Meat:filling', 'Uniformity', 'Salsa', 'Synergy',\n",
-              "       'Wrap', 'Unreliable', 'NonSD', 'Beef', 'Pico', 'Guac', 'Cheese',\n",
-              "       'Fries', 'Sour cream', 'Pork', 'Chicken', 'Shrimp', 'Fish', 'Rice',\n",
-              "       'Beans', 'Lettuce', 'Tomato', 'Bell peper', 'Carrots', 'Cabbage',\n",
-              "       'Sauce', 'Salsa.1', 'Cilantro', 'Onion', 'Taquito', 'Pineapple', 'Ham',\n",
-              "       'Chile relleno', 'Nopales', 'Lobster', 'Queso', 'Egg', 'Mushroom',\n",
-              "       'Bacon', 'Sushi', 'Avocado', 'Corn', 'Zucchini', 'Great', 'dd', 'mm',\n",
-              "       'yyyy', 'dow'],\n",
-              "      dtype='object')"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 17
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -1390,13 +1371,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 454
         },
-        "outputId": "9d2ffbfe-4337-4b48-a020-e9af281d19f7"
+        "outputId": "2077ef00-ad63-45d3-acb4-ab45c6954f8f"
       },
       "source": [
-        "numFeats = list(trainDf.select_dtypes(include='number'))\n",
-        "trainDf[numFeats].isnull().sum()"
+        "numCols = list(trainDf.select_dtypes(include='number'))\n",
+        "trainDf[numCols].isnull().sum()"
       ],
-      "execution_count": 85,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1431,9 +1412,23 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 85
+          "execution_count": 94
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1jL0leSqCl_s",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "?logReg\n",
+        "logReg = LogisticRegression(solver='sag')"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1442,58 +1437,74 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 399
+          "height": 328
         },
-        "outputId": "9916d9b0-6885-426b-c8ae-9d433fcca85a"
+        "outputId": "0585970d-4c33-43cf-b60c-8af3ed6196f6"
       },
       "source": [
-        "feats = ['Yelp', 'Google', 'Cost', 'Hunger', 'Length', 'Circum', 'Volume', \n",
-        "         'Tortilla', 'Temp', 'Meat', 'Fillings', 'Meat:filling', 'Uniformity',\n",
-        "         'Salsa', 'Synergy', 'Wrap', 'dd', 'mm', 'yyyy', 'dow']\n",
+        "numFeats = ['Yelp', 'Google', 'Cost', 'Hunger', 'Length', 'Circum', 'Volume', \n",
+        "            'Tortilla', 'Temp', 'Meat', 'Fillings', 'Meat:filling', 'Uniformity',\n",
+        "            'Salsa', 'Synergy', 'Wrap', 'dd', 'mm', 'yyyy', 'dow']\n",
         "\n",
+        "feats = ['Yelp', 'Cost', 'Volume']\n",
         "XTrain = trainDf[feats]\n",
         "XVal = valDf[feats]\n",
+        "XTest = testDf[feats]\n",
         "\n",
         "XTrainImpute = impute.fit_transform(XTrain)\n",
         "XValImpute = impute.fit_transform(XVal)\n",
+        "XTestImpute = impute.fit_transform(XTest)\n",
         "\n",
-        "linearReg.fit(XTrainImpute, yTrain)\n",
+        "logReg.fit(XTrainImpute, yTrain)\n",
         "\n",
-        "pd.Series(linearReg.coef_, feats)"
+        "prtBaseAcc() \n",
+        "print('Train Accuracy: ', logReg.score(XTrainImpute, yTrain))\n",
+        "print('Validation Accuracy: ', logReg.score(XValImpute, yVal))\n",
+        "print('Test Accuracy: ', logReg.score(XTestImpute, yTest))\n",
+        "print('\\n')\n",
+        "\n",
+        "pd.Series(logReg.coef_[0], feats)"
       ],
-      "execution_count": 91,
+      "execution_count": 139,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Baseline Test Accuracy: 0.59060\n",
+            "Baseline Validate Accuracy: 0.55294\n",
+            "Baseline Train Accuracy: 0.57895\n",
+            "\n",
+            "\n",
+            "Train Accuracy:  0.5906040268456376\n",
+            "Validation Accuracy:  0.5058823529411764\n",
+            "Test Accuracy:  0.4473684210526316\n",
+            "\n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/sag.py:337: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+            "  \"the coef_ did not converge\", ConvergenceWarning)\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Yelp            0.092031\n",
-              "Google         -0.124169\n",
-              "Cost            0.037947\n",
-              "Hunger          0.016189\n",
-              "Length          0.099844\n",
-              "Circum          0.174847\n",
-              "Volume         -2.532584\n",
-              "Tortilla        0.058134\n",
-              "Temp            0.050412\n",
-              "Meat            0.100604\n",
-              "Fillings        0.096096\n",
-              "Meat:filling    0.069222\n",
-              "Uniformity      0.012793\n",
-              "Salsa           0.038059\n",
-              "Synergy         0.125230\n",
-              "Wrap            0.007882\n",
-              "dd             -0.000450\n",
-              "mm             -0.001270\n",
-              "yyyy           -0.010327\n",
-              "dow             0.020017\n",
+              "Yelp      0.131863\n",
+              "Cost      0.199036\n",
+              "Volume   -0.059738\n",
               "dtype: float64"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 91
+          "execution_count": 139
         }
       ]
     },
