--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -188,17 +188,17 @@
       "metadata": {
         "id": "C9lZF5LV4Xnu",
         "colab_type": "code",
+        "outputId": "e077fbb6-20a6-4ca3-d16d-3871edbad17b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 249
-        },
-        "outputId": "a4c04826-5bab-4c40-f664-712cbd58cc3f"
+        }
       },
       "source": [
         "print(df.shape)\n",
         "df.head()"
       ],
-      "execution_count": 14,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,7 +619,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 29
         }
       ]
     },
@@ -638,17 +638,17 @@
       "metadata": {
         "id": "WZ3Z7hWB7jLv",
         "colab_type": "code",
+        "outputId": "674b42fd-5b07-4b4c-dd39-d5bd25957778",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 134
-        },
-        "outputId": "a7cae193-decd-468f-cb24-ac8c7cb22603"
+        }
       },
       "source": [
         "df['Date'] = pd.to_datetime(df['Date'], infer_datetime_format=True)\n",
         "df['Date'].describe()"
       ],
-      "execution_count": 15,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -666,7 +666,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 30
         }
       ]
     },
@@ -675,11 +675,11 @@
       "metadata": {
         "id": "j_Cw6iXZ8AFZ",
         "colab_type": "code",
+        "outputId": "da15bbfb-b116-4017-ffd6-8c5338f29678",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1b19137c-4274-4575-ecd1-32d0f66f8a90"
+        }
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
@@ -688,7 +688,7 @@
         "val  = df[df.Date.dt.year == 2017]\n",
         "train.shape, val.shape"
       ],
-      "execution_count": 19,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -700,7 +700,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 31
         }
       ]
     },
@@ -719,16 +719,16 @@
       "metadata": {
         "id": "O22N93kV_u1d",
         "colab_type": "code",
+        "outputId": "89421380-e544-47dc-8699-4db9ca40b0d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 316
-        },
-        "outputId": "7d42c204-18ef-4220-bf11-802e26882a9b"
+        }
       },
       "source": [
         "train.head()"
       ],
-      "execution_count": 26,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1142,7 +1142,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 32
         }
       ]
     },
@@ -1151,11 +1151,11 @@
       "metadata": {
         "id": "LF4gnLVlAP89",
         "colab_type": "code",
+        "outputId": "16cd2155-b8fd-4948-8a44-2f0eb9f52cf6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "500a5f76-d897-4372-93e2-fff1999d880a"
+        }
       },
       "source": [
         " # method 1\n",
@@ -1163,7 +1163,7 @@
         "y_train = train[target]\n",
         "y_train.value_counts(normalize=True)"
       ],
-      "execution_count": 22,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1177,7 +1177,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 33
         }
       ]
     },
@@ -1186,11 +1186,11 @@
       "metadata": {
         "id": "jN8Uc2jPAouB",
         "colab_type": "code",
+        "outputId": "f4e0a9d1-7062-432f-8c1e-3027def9342a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6e908134-b9bf-4fab-9760-df0911e65747"
+        }
       },
       "source": [
         "# method 2\n",
@@ -1199,7 +1199,7 @@
         "from sklearn.metrics import accuracy_score\n",
         "accuracy_score(y_train, y_pred)"
       ],
-      "execution_count": 23,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1211,7 +1211,39 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XmE0LnMHh59A",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d929cc19-2098-4f29-e40a-4937dbdebef7"
+      },
+      "source": [
+        "y_val=val[target]\n",
+        "y_pred=[great_burr]*len(y_val)\n",
+        "accuracy_score(y_val, y_pred)"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5529411764705883"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
         }
       ]
     },
@@ -1224,6 +1256,19 @@
       "source": [
         "### Logistic Regeression"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iYSx7DHqitRZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1248,7 +1293,7 @@
       },
       "source": [
         "# 2. Instantiate this class\n",
-        "log_reg = LogisticRegression('lbfgs')"
+        "log_reg = LogisticRegression(solver='lbfgs')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1262,7 +1307,7 @@
       },
       "source": [
         "# 3. Arrange X feature matrices (already did y target vectors)\n",
-        "features = [Volume', 'Tortilla', 'Temp', 'Meat', 'Fillings', 'Meat:filling', 'Uniformity', 'Salsa', 'Synergy', 'Wrap']\n",
+        "features = ['Volume', 'Tortilla', 'Temp', 'Meat', 'Fillings', 'Meat:filling', 'Uniformity', 'Salsa', 'Synergy', 'Wrap']\n",
         "X_train = train[features]\n",
         "X_val = val[features]\n",
         "\n",
@@ -1280,12 +1325,40 @@
       "metadata": {
         "id": "TEjohZHPDcFU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f65ac22d-7a7f-4874-9922-7f7434311a8f"
       },
       "source": [
         "# 4. Fit the model\n",
         "log_reg.fit(X_train_imputed, y_train)\n",
-        "print('Validation Accuracy'), log_reg.score(X_val_imputed, y_val)"
+        "\n",
+        "#5 Apply the model to the new data\n",
+        "log_reg.score(X_val_imputed, y_val)\n",
+        "print('Validation Accuracy', log_reg.score(X_val_imputed, y_val))"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Validation Accuracy 0.8470588235294118\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t_BTp4MDjCpw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
